# smaps-explorer

./: Cargo.toml  LICENSE  Makefile  README.md
.zed/: tasks.json
src/: app.rs  handler.rs  main.rs  ui.rs
static/: recording.yml  smaps-screen-recording.yml
