[package]
name = "mematlas-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
clap-stdin = "0.4.0"
itertools = "0.13.0"
log = "0.4.22"
procfs = "0.16.0"
ratatui = "0.27.0"
tui-logger = { git = "https://github.com/gin66/tui-logger", version = "0.11.2" }
tui-tree-widget = "0.21.0"
